--- a/index.html
+++ b/index.html
@@ -528,14 +528,13 @@
           <span>Instructor:</span><strong>Mark Bolding, PhD (UAB)</strong>
         </span>
         <span class="tag">
-          <span>Format:</span><strong>Infographic-style continuous scroll (dark mode)</strong>
+          <span>Student:</span><strong> Sathvik Bodepudi</strong>
         </span>
       </div>
       <p class="muted">
         This reimagined lecture covers the full content of Lecture&nbsp;1 and weaves in
         limitations, recent advances, and methodological debates. It is designed as a
-        single, smooth-scrolling learning experience that students can use alongside
-        (or instead of) the original slides.
+        single, smooth-scrolling learning experience that students can use as an alternative to the original slides.
       </p>
     </div>
   </header>
@@ -1167,4 +1166,5 @@ def square_wave(t, T, A, n_terms):
   </footer>
 </body>
 </html>
+
 
