--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         </div>
         <div class="figure">
   <div class="figure-title">Figure 1. Conceptual pipeline from anatomy to dataset</div>
-  <img src="figure1_conceptual_pipeline.png" alt="Conceptual neuroimaging pipeline from brain anatomy to digital datasets" />
+  <img src="conceptual_pipeline.png" alt="Conceptual neuroimaging pipeline from brain anatomy to digital datasets" />
   <p class="figure-caption">
     Conceptual pipeline illustrating the transformation from continuous brain anatomy to
     discrete digital representations used in neuroimaging. From physical signal acquisition,
@@ -1114,10 +1114,15 @@ def square_wave(t, T, A, n_terms):
 
       <p class="subtle-label">Primary source</p>
       <ul class="reference-list">
-        <li>
-          Bolding, M. (2025). <em>NBL 625/425 – Methods in Human Neuroimaging, Lecture 1:
-          Background material on mathematical foundations of imaging</em>.
-          University of Alabama at Birmingham.
+        <li> Bolding, M. (2025). <em>NBL 625/425 – Methods in Human Neuroimaging, Lecture 1: Mathematical foundations of imaging</em>. University of Alabama at Birmingham.</li>
+  <li>Gonzalez, R. C., & Woods, R. E. (2018). <em>Digital Image Processing</em> (4th ed.). Pearson.</li>
+  <li>McRobbie, D. W., Moore, E. A., Graves, M. J., & Prince, M. R. (2017). <em>MRI from Picture to Proton</em> (3rd ed.). Cambridge University Press.</li>
+  <li>Strang, G. (2016). <em>Introduction to Linear Algebra</em> (5th ed.). Wellesley-Cambridge Press.</li>
+  <li>Poldrack, R. A., Mumford, J. A., & Nichols, T. E. (2011). <em>Handbook of Functional MRI Data Analysis</em>. Cambridge University Press.</li>
+  <li>Bracewell, R. N. (2000). <em>The Fourier Transform and Its Applications</em> (3rd ed.). McGraw–Hill.</li>
+  <li>MRIQuestions.com. (n.d.). <em>Fourier Transform (FT) in MRI</em>. https://mriquestions.com/fourier-transform-ft.html</li>
+  <li>Brown, R. W., Cheng, Y. C. N., Haacke, E. M., Thompson, M. R., & Venkatesan, R. (2014). <em>Magnetic Resonance Imaging: Physical Principles and Sequence Design</em> (2nd ed.). Wiley.</li>
+  <li>Lustig, M., Donoho, D., & Pauly, J. M. (2007). Sparse MRI. <em>Magnetic Resonance in Medicine</em>, 58(6), 1182–1195.</li>
         </li>
       </ul>
 
@@ -1140,10 +1145,8 @@ def square_wave(t, T, A, n_terms):
       <p class="subtle-label">Additional figures / methodological advances</p>
       <ul class="reference-list">
         <li>
-          (Student: insert specific citations for any external MRI figures such as the water–fat
-          phase example, k-space pattern illustration, and scalar/vector/matrix/tensor infographic,
-          as well as any research papers on parallel imaging, compressed sensing, or deep-learning
-          reconstruction that you discuss in your teaching philosophy.)
+          Bolding, M. (2025)
+          ChatGPT, OPENAI (2025)
         </li>
       </ul>
     </section>
@@ -1159,5 +1162,6 @@ def square_wave(t, T, A, n_terms):
   </footer>
 </body>
 </html>
+
 
 
